Fixes font sizes and rounded corners on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,5 @@
 .clearButton {
     height: 8vh;
     width: 100vw;
+    font-size: 1.5em;
 }
