--- a/src/Switcher.css
+++ b/src/Switcher.css
@@ -6,4 +6,5 @@
     flex-grow: 1;
     height: 8vh;
     width: 33.33vw;
+    font-size: 1.5em;
 }
